# ClientApp/src/app/api/services/passenger.service.ts
@@ -10,6 +10,7 @@ import { Observable } from 'rxjs';
 import { map, filter } from 'rxjs/operators';
 
 import { NewPassengerDto } from '../models/new-passenger-dto';
+import { PassengerRm } from '../models/passenger-rm';
 
 @Injectable({
   providedIn: 'root',
@@ -70,6 +71,103 @@ export class PassengerService extends BaseService {
 
     return this.registerPassenger$Response(params).pipe(
       map((r: StrictHttpResponse<void>) => r.body as void)
+    );
+  }
+
+  /**
+   * Path part for operation findPassenger
+   */
+  static readonly FindPassengerPath = '/Passenger/{email}';
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `findPassenger$Plain()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  findPassenger$Plain$Response(params: {
+    email: string;
+    context?: HttpContext
+  }
+): Observable<StrictHttpResponse<PassengerRm>> {
+
+    const rb = new RequestBuilder(this.rootUrl, PassengerService.FindPassengerPath, 'get');
+    if (params) {
+      rb.path('email', params.email, {});
+    }
+
+    return this.http.request(rb.build({
+      responseType: 'text',
+      accept: 'text/plain',
+      context: params?.context
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<PassengerRm>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access to only to the response body.
+   * To access the full response (for headers, for example), `findPassenger$Plain$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  findPassenger$Plain(params: {
+    email: string;
+    context?: HttpContext
+  }
+): Observable<PassengerRm> {
+
+    return this.findPassenger$Plain$Response(params).pipe(
+      map((r: StrictHttpResponse<PassengerRm>) => r.body as PassengerRm)
+    );
+  }
+
+  /**
+   * This method provides access to the full `HttpResponse`, allowing access to response headers.
+   * To access only the response body, use `findPassenger()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  findPassenger$Response(params: {
+    email: string;
+    context?: HttpContext
+  }
+): Observable<StrictHttpResponse<PassengerRm>> {
+
+    const rb = new RequestBuilder(this.rootUrl, PassengerService.FindPassengerPath, 'get');
+    if (params) {
+      rb.path('email', params.email, {});
+    }
+
+    return this.http.request(rb.build({
+      responseType: 'json',
+      accept: 'text/json',
+      context: params?.context
+    })).pipe(
+      filter((r: any) => r instanceof HttpResponse),
+      map((r: HttpResponse<any>) => {
+        return r as StrictHttpResponse<PassengerRm>;
+      })
+    );
+  }
+
+  /**
+   * This method provides access to only to the response body.
+   * To access the full response (for headers, for example), `findPassenger$Response()` instead.
+   *
+   * This method doesn't expect any request body.
+   */
+  findPassenger(params: {
+    email: string;
+    context?: HttpContext
+  }
+): Observable<PassengerRm> {
+
+    return this.findPassenger$Response(params).pipe(
+      map((r: StrictHttpResponse<PassengerRm>) => r.body as PassengerRm)
     );
   }
 
